TCB-9 Fix layout issue on some other reports

--- a/modules/openlmis-web/src/main/webapp/public/less/report.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/report.less
@@ -86,19 +86,19 @@ th.header {
 
 /** Side bar */
 .row-fluid > .sidebar {
-  //position: relative;
-  //top: 0;
-  //left: auto;
-  //float: left;
+  position: relative;
+  top: 0;
+  left: auto;
+  float: left;
   //display: inline-block;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  width: 100%; /* width of sidebar */
+  //margin-top: 10px;
+  //margin-bottom: 5px;
+  width: 230px; /* width of sidebar */
 }
 
 .row-fluid > .content-body {
-  //margin-left: 230px; /* width of sidebars + 10px of margin */
-  //margin-right: 0;
+  margin-left: 230px; /* width of sidebars + 10px of margin */
+  margin-right: 0;
   //margin: auto;
   //margin-left: 5px;
   //padding-left: 5px;
